# AsusTufController_Windows

./: .gitignore  CMakeLists.txt  FancontrolAgreement.md  README.md  create_icon.ps1  fix_ta_ts_ultimate.py  generate_translations.py  run.bat
src/: AuraController.cpp  AuraController.h  FanController.cpp  FanController.h  FanCurveController.cpp  FanCurveController.h  LanguageController.cpp  LanguageController.h  SystemStatsMonitor.cpp  SystemStatsMonitor.h  ThemeController.cpp  ThemeController.h  main.cpp
src/platform/windows/: AsusWinIO.cpp  AsusWinIO.h  AtkAcpi.cpp  AtkAcpi.h  AuraHID.cpp  AuraHID.h  WmiWrapper.cpp  WmiWrapper.h
translations/: AsusTufController_ar.ts  AsusTufController_bn.ts  AsusTufController_de.ts  AsusTufController_es.ts  AsusTufController_fa.ts  AsusTufController_fr.ts  AsusTufController_hi.ts  AsusTufController_id.ts  AsusTufController_it.ts  AsusTufController_ja.ts  AsusTufController_ko.ts  AsusTufController_mr.ts  AsusTufController_pa.ts  AsusTufController_pl.ts  AsusTufController_pt.ts  AsusTufController_ru.ts  AsusTufController_sw.ts  AsusTufController_ta.ts  AsusTufController_tr.ts  AsusTufController_ur.ts  AsusTufController_vi.ts  AsusTufController_zh.ts  AsusTufFanControl_ar.ts  AsusTufFanControl_bn.ts  AsusTufFanControl_de.ts  AsusTufFanControl_es.ts  AsusTufFanControl_fa.ts  AsusTufFanControl_fr.ts  AsusTufFanControl_hi.ts  AsusTufFanControl_id.ts  AsusTufFanControl_it.ts  AsusTufFanControl_ja.ts  AsusTufFanControl_ko.ts  AsusTufFanControl_mr.ts  AsusTufFanControl_pa.ts  AsusTufFanControl_pl.ts  AsusTufFanControl_pt.ts  AsusTufFanControl_ru.ts  AsusTufFanControl_sw.ts  AsusTufFanControl_ta.qm  (+5 more)
ui/: CircularGauge.qml  GraphCard.qml  Main.qml  StatsCard.qml  Translations.js
ui/components/: Sidebar.qml
ui/pages/: AuraPage.qml  BatteryPage.qml  DashboardPage.qml  FanPage.qml  SettingsPage.qml
